# faker.rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
