[package]
name = "faker"
version = "0.1.0"
authors = ["Huajian Mao <huajianmao@gmail.com>"]
edition = "2018"
description = "A fake data generator library"
readme = "README.md"
documentation = "https://github.com/huajianmao/faker.rs/README.md"
license = "MIT"
keywords = ["fake", "generator"]

[lib]
name = "faker"
crate-type = ["lib"]

[dependencies]
